--- a/app/src/main/res/layout/activity_vault.xml
+++ b/app/src/main/res/layout/activity_vault.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.actvities.VaultActivity">
+    tools:context=".view.actvities.VaultActivity"
+    android:background="@drawable/wave">
 
     <!-- Top App Bar -->
     <com.google.android.material.appbar.MaterialToolbar
