Update activity_withdraw_request.xml and activity_worker_applications.xml

--- a/app/src/main/res/layout/activity_withdraw_request.xml
+++ b/app/src/main/res/layout/activity_withdraw_request.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wave"
     android:padding="0dp">
 
     <!-- Toolbar with back button -->
@@ -14,7 +15,7 @@
         android:background="?attr/colorSurface"
         app:title="Withdraw Requests"
         app:titleTextColor="?attr/colorOnSurface"
-        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"/>
+        app:navigationIcon="@drawable/outline_arrow_back_24"/>
 
     <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
@@ -26,5 +27,7 @@
         android:clipToPadding="false"
         android:paddingBottom="16dp"
         android:scrollbars="vertical"
-        android:background="?attr/colorSurface"/>
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:background="@drawable/bg_card"/>
 </LinearLayout>
