--- a/app/src/main/res/layout/activity_worker_applications.xml
+++ b/app/src/main/res/layout/activity_worker_applications.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/wave">
 
     <!-- Toolbar with back button -->
     <androidx.appcompat.widget.Toolbar
@@ -12,7 +14,8 @@
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:title="My Applications"/>
+        android:title="My Applications"
+        app:titleTextColor="@color/onPrimary_47"/>
 
     <!-- Empty state message -->
     <TextView
@@ -32,6 +35,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="8dp"/>
+        android:padding="8dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"/>
 
 </LinearLayout>
