--- a/app/src/main/res/layout/activity_worker_review.xml
+++ b/app/src/main/res/layout/activity_worker_review.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#F8F8F8"
-    android:padding="16dp"
+    android:background="@drawable/wave"
     tools:context=".view.actvities.WorkerReviewActivity">
 
     <!-- Header with Back Button -->
@@ -15,7 +14,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:paddingBottom="10dp">
+        android:padding="16dp">
 
         <ImageView
             android:id="@+id/backBtn"
@@ -60,6 +59,8 @@
         android:layout_marginTop="8dp"
         android:clipToPadding="false"
         android:paddingBottom="8dp"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"/>
 
 </LinearLayout>
