--- a/app/src/main/res/layout/activity_emp_profile.xml
+++ b/app/src/main/res/layout/activity_emp_profile.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/wave">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/btnLogout">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -21,11 +20,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:padding="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="20dp">
-
+            android:padding="20dp">
 
             <!-- Profile Header -->
             <com.google.android.material.card.MaterialCardView
@@ -106,7 +101,7 @@
                     android:textSize="15sp"
                     app:cornerRadius="20dp"
                     app:icon="@drawable/outline_search_24"
-                    app:iconGravity="textTop"
+                    app:iconGravity="top"
                     app:iconPadding="8dp"
                     app:iconSize="40dp"
                     app:iconTint="@color/onPrimary_47"
@@ -125,13 +120,12 @@
                     android:textSize="15sp"
                     app:cornerRadius="20dp"
                     app:icon="@drawable/outline_account_balance_wallet_24"
-                    app:iconGravity="textTop"
+                    app:iconGravity="top"
                     app:iconPadding="8dp"
                     app:iconSize="40dp"
                     app:iconTint="@color/onPrimary_47"
                     app:layout_columnWeight="1"
                     app:layout_gravity="fill_horizontal" />
-
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnMyReviews"
@@ -145,7 +139,7 @@
                     android:textSize="15sp"
                     app:cornerRadius="20dp"
                     app:icon="@drawable/outline_star_24"
-                    app:iconGravity="textTop"
+                    app:iconGravity="top"
                     app:iconPadding="8dp"
                     app:iconSize="40dp"
                     app:iconTint="@color/onPrimary_47"
@@ -164,7 +158,7 @@
                     android:textSize="15sp"
                     app:cornerRadius="20dp"
                     app:icon="@drawable/outline_profile_24"
-                    app:iconGravity="textTop"
+                    app:iconGravity="top"
                     app:iconPadding="8dp"
                     app:iconSize="40dp"
                     app:iconTint="@color/onPrimary_47"
@@ -183,7 +177,7 @@
                     android:textSize="15sp"
                     app:cornerRadius="20dp"
                     app:icon="@drawable/outline_contract_edit_24"
-                    app:iconGravity="textTop"
+                    app:iconGravity="top"
                     app:iconPadding="8dp"
                     app:iconSize="40dp"
                     app:iconTint="@color/onPrimary_47"
@@ -202,7 +196,7 @@
                     android:textSize="15sp"
                     app:cornerRadius="20dp"
                     app:icon="@drawable/outline_history_24"
-                    app:iconGravity="textTop"
+                    app:iconGravity="top"
                     app:iconPadding="8dp"
                     app:iconSize="40dp"
                     app:iconTint="@color/onPrimary_47"
@@ -221,7 +215,7 @@
                     android:textSize="15sp"
                     app:cornerRadius="20dp"
                     app:icon="@drawable/outline_briefcase_meal_24"
-                    app:iconGravity="textTop"
+                    app:iconGravity="top"
                     app:iconPadding="8dp"
                     app:iconSize="40dp"
                     app:iconTint="@color/onPrimary_47"
@@ -240,7 +234,7 @@
                     android:textSize="15sp"
                     app:cornerRadius="20dp"
                     app:icon="@drawable/outline_chat_24"
-                    app:iconGravity="textTop"
+                    app:iconGravity="top"
                     app:iconPadding="8dp"
                     app:iconSize="40dp"
                     app:iconTint="@color/onPrimary_47"
@@ -253,13 +247,20 @@
     <Button
         android:id="@+id/btnLogout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/error_47"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/bottomNavigation"
+        android:layout_margin="16dp"
         android:text="Log Out"
+        android:backgroundTint="@color/error_47"
         android:textColor="#FFFFFF" />
+
+    <!-- Bottom Navigation -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_nav_menu"
+        android:background="?android:attr/windowBackground" />
 
 </RelativeLayout>
