--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,6 +9,7 @@
     <color name="primary_pressed_47">#FFA000</color>
     <color name="onPrimary_47">#0B0B0C</color>
     <color name="onPrimary_change_47">#FFC107</color>
+    <color name="onSecondary_change_47">#0B0B0C</color>
 
     <!-- Neutrals -->
     <color name="Background_47">#0B0B0C</color>
